@@ -387,7 +387,7 @@ public class JavaWatchpoint extends JavaLineBreakpoint implements
 		boolean[] def = getDefaultAccessAndModificationValues();
 		Object[] values = new Object[def.length];
 		for (int i = 0; i < def.length; i++) {
-			values[i] = new Boolean(def[i]);
+			values[i] = Boolean.valueOf(def[i]);
 		}
 		String[] attributes = new String[] { ACCESS, MODIFICATION };
 		setAttributes(attributes, values);
